# 8BitAnalysers

./: .editorconfig  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  ci_c64.yml  ci_cpc.yml  msbuild.yml  release.yml  weekly-builds.yml
Data/: Back to Skool.z80  Batman.z80  Bomb Jack.z80  Cobra.z80  Cybernoid II.z80  Dan Dare.z80  Exolon.z80  Firefly.z80  Knight Tyme..z80  SabreWulf.z80  Spellbound.z80  Starquake.z80  Wizard's Lair.z80  imgui.ini  starquake.sna
Data/ArcadeZ80/: GlobalConfig.json  imgui.ini
Data/BBCAnalyser/: BBCRomsAnalysis.json  GlobalConfig.json  imgui.ini
Data/C64Analyser/: C64RomsAnalysis.json  GlobalConfig.json  imgui.ini
Data/C64Explorer/: imgui.ini
Data/CPCAnalyser/: CPCAnalyser.exe.old  CPCRomsAnalysis6128.json  GlobalConfig.json.old  GlobalConfig.old.json  imgui.ini
Data/Configs/: Exolon.json  Firelord.json  SplitPersonalities.json  Starquake.json  Starquake_copy.json  Temp.json
Data/Games/: Cybernoid.Z80  Light Force.z80  Saboteur II.z80  SplittingImages.z80  Zynaps.z80
Data/OutputBin/: Starquake.i64  Starquake.id0  Starquake.id1  Starquake.nam
Data/PCEAnalyser/: AssembleLogOld.txt  GlobalConfig.json  imgui.ini
Data/SpectrumAnalyser/: GlobalConfig_lasersquad.json  RomInfo.json  Rominfo.json  imgui.ini
Data/TubeElite/: GlobalConfig.json  imgui.ini
Docs/: CppRecompilationProposal.md  Phase0_CFG_Design.md  Recompiler_Status.md
Info/TubeElite/: Host230.lst  Tube65v1.src.txt
Scripts/: MakeDistPackage.bat  MakeDistPackageC64.bat  MakeDistPackageCPC.bat  MakeDistPackageZX.bat  build.bat
Scripts/ASM2Skool/: 6128ROM.asm  ASM2Skool.py  ASM2Skool.pyproj  ASM2Skool.sln
Source/: imgui_impl_dx11.cpp  imgui_impl_lucidextra.cpp  imgui_impl_lucidextra.h  main.cpp
Source/ArcadeZ80/: ArcadeZ80.cpp  ArcadeZ80.h  ArcadeZ80Config.cpp  ArcadeZ80Config.h  ArcadeZ80FrameBuffer.cpp  ArcadeZ80MCP.cpp  ArcadeZ80MCP.h  ArcadeZ80Machine.cpp  ArcadeZ80Machine.h  BBCFont.h  CMakeLists.txt  ChipsImpl.c  Main.cpp  SaveGame.h  ZXSpectrumAsmExporter.cpp
Source/BBC/: BBCChipsImpl.c  BBCChipsImpl.h  BBCConfig.cpp  BBCConfig.h  BBCEmulator.cpp  BBCEmulator.h  CMakeLists.txt  Main.cpp
Source/C64/: C64Chips.cpp  C64Chips.h  C64ChipsImpl.c  C64ChipsImpl.h  C64Config.cpp  C64Config.h  C64Display.cpp  C64Display.h  C64Emulator.cpp  C64Emulator.h  C64GamesList.cpp  C64GamesList.h  C64IOAnalysis.cpp  C64IOAnalysis.h  CMakeLists.txt  ChipsImpl.c  Main.cpp  main.cpp
Source/C64/FileLoaders/: CRTFile.cpp  CRTFile.h
Source/C64/GLFW/: GLFWMain.cpp
Source/C64/GraphicsViewer/: C64GraphicsViewer.cpp  C64GraphicsViewer.h
Source/C64/IOAnalysis/: C64IOAnalysis.cpp  C64IOAnalysis.h  CIAAnalysis.cpp  CIAAnalysis.h  IORegisterAnalysis.cpp  IORegisterAnalysis.h  SIDAnalysis.cpp  SIDAnalysis.h  VICAnalysis.cpp  VICAnalysis.h
Source/C64/Windows/: WinMain.cpp
Source/CPC/: App.h  CMakeLists.txt  CPCAsmExporter.cpp  CPCChipsImpl.c  CPCChipsImpl.h  CPCConfig.cpp  CPCConfig.h  CPCEmu.cpp  CPCEmu.h  CPCGameConfig.cpp  CPCGameConfig.h  CPCLuaAPI.cpp  CPCLuaAPI.h  CPCScreen.cpp  CPCScreen.h  CpcChipsImpl.c  CpcChipsImpl.h  CpcConstants.h  ExternalROMSupport.cpp  ExternalROMSupport.h  GameConfig.cpp  GameConfig.h  IOAnalysis.cpp  IOAnalysis.h  Main.cpp  MemoryHandlers.cpp  MemoryHandlers.h
Source/CodeAnalyser/: CodeAnalyser.cpp  CodeAnalyser.h  CodeAnalyserUI.cpp  CodeAnalyserUI.h  CodeToolTips.cpp  romlabels.h
Source/PCE/: AsmExportValidator.cpp  BankSet.cpp  BankSet.h  CMakeLists.txt  Constants.h  DebugStats.cpp  DebugStats.h  GameDb.cpp  GameDb.h  Main.cpp  Notes.txt  PCEAsmExporter.cpp  PCEConfig.cpp  PCEConfig.h  PCEEmu.cpp  PCEEmu.h  PCEGameConfig.cpp  PCEGameConfig.h  PCEMCPTools.cpp  PCEMCPTools.h
Source/Shared/: CMakeShared.txt  pch.h
Source/Speccy/: ChipsImpl.cpp  Speccy.cpp  Speccy.h
Source/TubeElite/: CMakeLists.txt  ChipsImpl.c  Main.cpp  SaveGame.cpp  TubeCharCommands.cpp  TubeCommands.cpp  TubeCommands.h  TubeElite.cpp  TubeElite.h  TubeEliteConfig.cpp  TubeEliteConfig.h  TubeEliteDisplay.cpp  TubeEliteDisplay.h  TubeEliteMachine.cpp  TubeEliteMachine.h  TubeFrameBuffer.cpp  TubeFrameBuffer.h
Source/UI/: ChipsImpl.cpp  CodeAnalyser.cpp  CodeAnalyser.h  Disassembler.cpp  Disassembler.h  FunctionHandlers.cpp  FunctionHandlers.h  GameConfig.cpp  GameConfig.h  (+21 more)
Source/ZXSpectrum/: CMakeLists.txt  Debugger.cpp  Debugger.h  GameConfig.cpp  GameConfig.h  GameData.cpp  GameData.h  GlobalConfig.cpp  GlobalConfig.h  IOAnalysis.cpp  IOAnalysis.h  Main.cpp  MemoryHandlers.cpp  MemoryHandlers.h  SkoolkitSupport.cpp  SkoolkitSupport.h  SpectrumConstants.h  SpectrumDevices.cpp  SpectrumDevices.h  SpectrumEmu.cpp  SpectrumEmu.h  SpectrumLuaAPI.cpp  SpectrumLuaAPI.h  ZXChipsImpl.c  ZXChipsImpl.h  ZXSpectrumAsmExporter.cpp  ZXSpectrumConfig.cpp  ZXSpectrumConfig.h  ZXSpectrumGameConfig.cpp  ZXSpectrumGameConfig.h  romlabels.h
Source/ZXSpectrum/Exporters/: AssemblerExport.cpp  AssemblerExport.h  JsonExport.cpp  JsonExport.h  SkoolFile.cpp  SkoolFile.h  SkoolFileInfo.cpp  SkoolkitExporter.cpp  SkoolkitExporter.h
Source/ZXSpectrum/GLFW/: GLFWMain.cpp
Source/ZXSpectrum/GameViewers/: GameViewer.cpp  GameViewer.h  MiscGameViewers.cpp  MiscGameViewers.h  StarquakeViewer.cpp
Source/ZXSpectrum/Importers/: SkoolkitImporter.cpp  SkoolkitImporter.h
Source/ZXSpectrum/SnapshotLoaders/: GameLoader.cpp  GameLoader.h  GamesList.cpp  GamesList.h  RZXLoader.cpp  RZXLoader.h  SNALoader.cpp  SNALoader.h  TAPLoader.cpp  TAPLoader.h  TZXLoader.cpp  TZXLoader.h  Z80Loader.cpp  Z80Loader.h
Source/ZXSpectrum/Tests/: ControlFlowGraphTests.cpp  SpectrumTests.cpp  SpectrumTests.h
Source/ZXSpectrum/Viewers/: BreakpointViewer.cpp  FrameTraceViewer.cpp  FrameTraceViewer.h  GraphicsViewer.cpp  GraphicsViewer.h  OverviewViewer.cpp  OverviewViewer.h  SpectrumViewer.cpp  SpectrumViewer.h  SpriteViewer.cpp  SpriteViewer.h  ViewerBase.h  ZXGraphicsView.cpp  ZXGraphicsView.h  ZXGraphicsViewer.cpp  ZXGraphicsViewer.h
Source/ZXSpectrum/Windows/: WinMain.cpp
VSProject/: SpeccyExplorer.sln
(+471 files in other folders)
